<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEEDBE"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:background="#FD9927"
        android:padding="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/concert_data"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FEEDBE"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/etUpsertArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/artist" />

            <EditText
                android:id="@+id/etUpsertLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/location" />

            <DatePicker
                android:id="@+id/dpUpsertDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/etUpsertPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />

            <EditText
                android:id="@+id/etUpsertPlaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_free_spaces"
                android:layout_marginTop="8dp"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbUpsertIsAccessible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/is_accessible" />

            <EditText
                android:id="@+id/etUpsertGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/genre" />

            <Button
                android:id="@+id/btnDoUpsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textStyle="bold" android:background="#FD9927"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>